modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/function_dont_match_parent_signature_parameter_default_values.gd
func test():
	print("Shouldn't reach this")

class Parent:
	func my_function(_par1: int = 0) -> int:
		return 0

class Child extends Parent:
	func my_function(_par1: int) -> int:
		return 0
